# OpenGLAssignment

./: CMakeLists.txt  README.md  TODOlist.md
include/: getBMP.h
src/: fieldAndSky.cpp  getBMP.cpp
